[Analytics engine] Unblock resilience ITs: strip lucene SPI, align query versions
The flat internalClusterTest classpath exposes both lucene-side and DF-side
META-INF/services/AnalyticsSearchBackendPlugin files. SPIClassIterator
(= ServiceLoader) iterates both for every extending plugin, so
PluginsService.createExtension throws on the (LucenePlugin)-vs-(DataFusionPlugin)
ctor mismatch and cluster bootstrap dies before any test body runs. Production
runs each plugin in its own URLClassLoader, so the conflict is test-only.

Three pieces:

* analytics-engine/build.gradle: register stripLuceneAnalyticsSpi Jar task
  that copies analytics-backend-lucene.jar minus the conflicting service
  file. Wire the stripped jar to internalClusterTestRuntimeOnly; keep the
  original project on internalClusterTestCompileOnly so LucenePlugin.class
  still resolves.

* analytics-engine/build.gradle: bump sqlUnifiedQueryVersion 3.6 -> 3.7 to
  match test-ppl-frontend (gradle dependency conflict).

* CoordinatorResilienceIT + CoordinatorTransportStressIT: declare LucenePlugin
  with empty extendedPlugins (was [AnalyticsPlugin]). With empty,
  AnalyticsPlugin.loadExtensions skips iterating SPI extensions through
  LucenePlugin's classloader, which would have hit the symmetric DF-side
  service file.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>